--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -459,7 +459,7 @@ function showBar(container,yset,textName,channelInfo) {
             text: textName
         },
         subtitle: {
-            text: 'iweek'
+            text: 'shen'
         },
         xAxis: {
             categories: channelInfo,
