--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -375,7 +375,7 @@ var chartThreeGetData=function(){
             var title=['新增','活跃','7天活跃','启动','次日留存','7日留存','30日留存','升级']
             var unit=['人','人','人','次','人','人','人','次'];
 
-            console.log(data['time']);
+//            console.log(data['time']);
             for(var i=0;i<8;i++){
                 var chartInfo= whichChart[i];
                 showChart(container[i],data[chartInfo],title[i],unit[i],data['time']);
